--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,14 @@
   --color-bf4800: #bf4800;
   --color-f5f5f7: #f5f5f7;
   --color-ededed: #ededed;
+  --color-777777: #777777;
+  --color-1c1c1b: #1c1c1b;
+}
+.section-heading{
+  font-size: 20px;
+  line-height: 32px;
+  font-weight: 500;
+  margin-bottom: 30px;
 }
 .card-wrapper{
   background-color: white;
@@ -28,6 +36,7 @@ a{
   box-shadow: none;
   border-color: inherit;
 }
+
 .gap-10{
   gap: 10px;
 }
@@ -110,6 +119,13 @@ footer .input-group-text{
   background-color: var(--color-232f3e);
   color: white;
   padding: 8px 17px;
+}
+.footer-img{
+  height: 40px;
+  
+}
+.goog{
+  border-radius: 5px;
 }
 /* Footer Part Ends Here */
 
@@ -216,11 +232,242 @@ footer .input-group-text{
 
 .blog-card{
   background-color: white;
-  padding: 20px;
+
   border-radius: 10px;
 }
-
-
-
-
+.blog-card img{
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+.blog-content{
+  padding: 15px;
+}
+.blog-content p.date{
+  font-size: 13px;
+  line-height: 24px;
+  text-transform: uppercase;
+  letter-spacing: 0;
+  font-weight: 400;
+  color: var(--color-777777);
+  padding: 0;
+}
+.blog-content h5{
+  font-size: 18px;
+  color: var(--color-131921 );
+}
+.blog-content p.description{
+  font-size: 13px;
+  line-height: 22px;
+  color: var(--color-777777);
+}
 /* Blog Part Ends Here*/
+
+/* Product Card */
+
+.product-card{
+  padding: 15px;
+  background-color: white;
+  border-radius: 10px;
+  overflow: hidden;
+  width: 100%;
+}
+.product-card .product-image{
+  height: 270px;
+}
+.product-card .product-image .short{
+  height: 240px;
+}
+.product-card .product-image img{
+  object-fit: contain;
+}
+.product-card .product-image > img:last-child{
+  display: none;
+}
+.product-card:hover .product-image > img:nth-child(1){
+  display: none;
+  }
+  .product-card:hover .product-image > img:last-child{
+    display: block;
+  }
+.product-card:hover .action-bar{
+  right: 15px;
+}
+.product-card .product-details h6{
+  color: var(--color-bf4800);
+  font-size: 13px;
+}
+.product-card .product-details h5{
+  font-size: 15px;
+  color: var(--color-1c1c1b);
+}
+.product-card .product-details p.price{
+  font-size: 16px;
+  color: var(--color-1c1c1b);
+}
+.product-card p.description{
+  font-size: 13px;
+  color: var(--color-777777);
+  margin-right: 20px;
+}
+.action-bar{
+  top: 10%;
+  right: -23px;
+  transition:  0.3s;
+}
+.wishlist-icon{
+  top: 3%;
+  right: 15px;
+}
+/* Product Card Ends Here */
+
+/* Special Product */
+
+.special-product-card{
+  padding: 20px 10px;
+  border-radius: 10px;
+  background-color: white;
+}
+
+/* Special Product Ends Here */
+
+/* Famous Card */
+.black{
+  background-color: black;
+  border-radius: 10px;
+}
+.white{
+  background-color: white;
+  border-radius: 10px;
+}
+.famous-card .famous-content{
+  top: 10%;
+  left: 5%;
+}
+.famous-card img{
+  padding-top: 120px;
+}
+.famous-content h5 {
+  font-size: 13px;
+  line-height: 20px;
+  font-weight: 400;
+  color: white;
+  text-transform: uppercase;
+  margin-bottom: 7px;
+}
+.famous-content h6{
+  font-size: 24px;
+  line-height: 38px;
+  font-weight: 500;
+  color: white;
+}
+.famous-content p{
+  font-size: 12px;
+  line-height: 24px;
+  font-weight: 100;
+  color: white;
+}
+/* Famous Card Ends Here*/
+
+/* Our Store */
+.filter-card{
+  background-color: white;
+  border-radius: 10px;
+  padding: 15px 15px 25px;
+}
+.filter-title{
+  font-size: 16px;
+  line-height: 20px;
+  font-weight: 600;color: var(--color-1c1c1b);
+  margin-bottom: 30px;
+}
+.filter-card ul,
+.filter-card .form-check-label{
+  list-style-type: none;
+  font-size: 13px;
+  line-height: 30px;
+  color: var(--color-777777);
+  cursor: pointer;
+}
+.filter-card .form-check-input:focus{
+  box-shadow: none;
+  border-color: rgba(0, 0, 0, 0.25);
+}
+.filter-card .form-check-input:checked{
+  background-color: var(--color-febd69);
+  border-color: var(--color-febd69);
+}
+.sub-title{
+  font-size: 14px;
+  font-weight: 600;
+  color: var(--color-1c1c1b);
+  margin-bottom: 15px;
+  margin-top: 20px;
+}
+.colors{
+  list-style-type: none;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+}
+.colors li{
+  width: 20px;
+  height: 20px;
+  background-color: red;
+  border-radius: 50%;
+}
+.random-products h5{
+  font-size: 12px;
+  margin-bottom: 8px;
+}
+.random-products b{
+  font-size: 13px;
+}
+.random-products:first-child{
+  border-bottom: 1px solid var(--color-ededed);
+}
+.filter-sort-grid{
+  padding: 10px;
+  background-color: white;
+  border-radius: 10px;
+}
+.grid img{
+  width: 35px;
+  height: 35px;
+  background-color: #f2f2f2;
+  padding: 8px;
+  border-radius: 3px;
+  cursor: pointer;
+}
+.gr-12{
+  width: 100%;
+}
+.gr-6{
+  width: 49.4%;
+}
+.gr-4{
+  width: 32%;
+}
+.gr-3{
+  width: 24%;
+}
+.gr-12 .product-card{
+  display: flex;
+  gap: 20px;
+}
+.gr-6 .product-image{
+  width: 100%;
+}
+.gr-6 .product-image img{
+  margin: auto;
+  display: block;
+}
+.gr-12 .product-card .product-image{
+  width: 270px;
+}
+.gr-12 .product-card .product-image{
+  height: auto;
+}
+.gr-12 .action-bar{
+  top: 17%;
+}
+/* Our Store Ends Here */
